--- a/css/styles.css
+++ b/css/styles.css
@@ -1,223 +1,322 @@
-:root{
-    --first-text-color:#FFFFFF;
-    --second-text-color:#2E2F42;
-    --third-text-color:#434455;
+/** @format */
+
+:root {
+  --first-text-color: #ffffff;
+  --second-text-color: #2e2f42;
+  --third-text-color: #434455;
 }
-body{
-font-family: 'Roboto', sans-serif;
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+ul,
+ol {
+  margin: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
+body {
+  font-family: "Roboto", sans-serif;
 }
 .list {
-    list-style: none;
+  list-style: none;
 }
-.link{
-    text-decoration: none;
+.link {
+  text-decoration: none;
 }
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
 /*-----------------HEADER--------------- */
-.header-site{
-    background-color:var(--first-text-color);
+.header-site {
+  background-color: var(--first-text-color);
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.header-site > .container {
+  display: flex;
+  align-items: center;
+}
+.navigation {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+  gap: 40px;
+}
+.header-list {
+  display: flex;
+  gap: 40px;
 }
 .header-logo {
-font-family: 'Raleway', sans-serif;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.33;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--second-text-color);
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--second-text-color);
 }
 .header-logo-item {
-font-family: 'Raleway', sans-serif;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.33;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #4D5AE5;
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 .header-link {
-font-weight: 700;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: var(--second-text-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
 }
 .header-mail {
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color:var(--third-text-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--third-text-color);
+  margin-right: 40px;
 }
 .header-tel {
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-text-transform: uppercase;
-color:var(--third-text-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  color: var(--third-text-color);
 }
 /*-----------------MAIN S-1--------------- */
 .hero {
-    background-color: var(--second-text-color);
+  background-color: var(--second-text-color);
+  padding-top: 188px;
+  padding-bottom: 188px;
+  display: flex;
 }
 .hero-title {
-font-weight: 700;
-font-size: 56px;
-line-height: 1.07;
-text-align: center;
-letter-spacing: 0.02em;
-color:var(--first-text-color);
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--first-text-color);
+  margin-bottom: 48px;
 }
 .hero-btn {
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.18;
-    letter-spacing: 0.04em;
-    cursor: pointer;
-    color:var(--first-text-color);
-    background:#4D5AE5;
+  width: 169px;
+  height: 56px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.04em;
+  align-items: center;
+  cursor: pointer;
+  color: var(--first-text-color);
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  display: block;
+  margin: auto;
 }
 /*-----------------MAIN S-2--------------- */
-.solution {  
-    background-color:var(--first-text-color); 
+.solution {
+  background-color: var(--first-text-color);
+  padding-top: 103px;
 }
 .solution-list {
+  display: flex;
+  gap: 24px;
 }
 .solution-item {
 }
 .solution-pre-title {
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color:#2E2F42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 .solution-item-text {
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color:var(--third-text-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--third-text-color);
 }
 /*-----------------MAIN S-3--------------- */
 .work {
-    background-color:var(--first-text-color);
+  background-color: var(--first-text-color);
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .work-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-text-align: center;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-color:var(--second-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--second-text-color);
 }
 .work-list {
+  display: flex;
+  gap: 24px;
+  margin-top: 72px;
 }
 .work-item {
 }
 /*-----------------MAIN S-4--------------- */
 .team {
-    background-color:#F4F4FD;
+  background-color: #f4f4fd;
+  padding-bottom: 120px;
 }
 .team-title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.11;
-text-align: center;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-color:var(--second-text-color) ;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--second-text-color);
 }
 .team-list {
+  display: flex;
+  gap: 24px;
+  margin-top: 72px;
 }
 .team-item {
-}
-.team-item-img {
+  background-color: var(--first-text-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-item-name {
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-text-align: center;
-letter-spacing: 0.02em;
-color:var(--second-text-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
+  margin-top: 32px;
 }
 .team-item-position {
-font-size: 16px;
-line-height: 1.5;
-text-align: center;
-letter-spacing: 0.02em;
-color:var(--third-text-color);
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--third-text-color);
+  margin-top: 8px;
+  margin-bottom: 32px;
 }
 /*-----------------FOOTER--------------- */
-.footer-site{
- background-color: var(--second-text-color);
+.footer-site {
+  background-color: var(--second-text-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-logo {
-font-family: 'Raleway';
-font-style: normal;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.16;
-display: flex;
-align-items: center;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color:#F4F4FD;
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.16;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
 }
 .foter-logo-item {
-font-family: 'Raleway', sans-serif;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.16;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #4D5AE5;
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
 }
 .footer-text {
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #E7E9FC;
+  width: 264px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #e7e9fc;
+  margin-top: 16px;
 }
 /*-----------------PORTFOLIO--------------- */
 .chose {
+  padding-top: 96px;
+  padding-bottom: 72px;
 }
 .chose-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 .chose-item {
 }
 .chose-btn {
-font-weight: 700;
-font-size: 16px;
-line-height: 1.5;
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.04em;
-color: #4D5AE5;
-background:#F4F4FD;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  background: #f4f4fd;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  padding: 12px 24px 12px 24px;
 }
-.chose-btn:hover{
-color: #FFFFFF;
-background:#404BBF;
-cursor: pointer;
+.chose-btn:hover {
+  color: #ffffff;
+  background: #404bbf;
+  cursor: pointer;
 }
 .gallery {
+  padding-bottom: 120px;
 }
 .gallery-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  flex-wrap: wrap;
+}
+.gallery-item:nth-child(-n + 6) {
+  margin-bottom: 48px;
 }
 .gallery-item {
+  width: 360px;
+  height: 420px;
+  border: 1px solid #e7e9fc;
 }
 .gallery-item-pretitle {
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color:var(--second-text-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
+  margin-top: 32px;
+  margin-bottom: 8px;
+  padding-left: 16px;
 }
 .gallery-item-position {
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: var(--third-text-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding-left: 16px;
+  color: var(--third-text-color);
 }
