--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ body {
   color: var(--first-text-color);
   background: #4d5ae5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
   border-radius: 4px;
   display: block;
   margin: auto;
