--- a/css/styles.css
+++ b/css/styles.css
@@ -215,7 +215,6 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--second-text-color);
-  margin-top: 32px;
 }
 .team-item-position {
   font-size: 16px;
@@ -224,7 +223,6 @@ body {
   letter-spacing: 0.02em;
   color: var(--third-text-color);
   margin-top: 8px;
-  margin-bottom: 32px;
 }
 .team-item-padding {
   padding: 32px 16px 32px 16px;
@@ -310,7 +308,8 @@ body {
 .gallery-list {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
   flex-wrap: wrap;
   margin-top: 72px;
 }
@@ -318,7 +317,6 @@ body {
   width: 360px;
   height: 420px;
   border: 1px solid #e7e9fc;
-  margin-bottom: 48px;
 }
 .gallery-item-pretitle {
   font-weight: 500;
